feat(orm): add MongoDB and SQLite support to kof.orm with new runtime methods